--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,6 +8,8 @@ on:
         default: "World"
       approval:
         description: "Approve to Continue..."
+        type: string
+        required: true
 
 jobs:
     hello:
@@ -16,6 +18,6 @@ jobs:
         steps:
 
         - name: Hello Step
-          if: ${{ github.events.inputs.approval }} == approved
+          if: ${{ github.events.inputs.approval }} == 'approved'
           run: echo "Hello ${{ github.event.inputs.name }}"
 
