--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,6 +18,6 @@ jobs:
         steps:
 
         - name: Hello Step
-          if: ${{ github.events.inputs.approval }} == 'approved'
+          if: ${{ github.events.inputs.approval  || inputs.approval }} == 'approved'
           run: echo "Hello ${{ github.event.inputs.name }}"
 
